client fee can be added with builder

--- a/test/autoquote_widget/autoquote-test.html
+++ b/test/autoquote_widget/autoquote-test.html
@@ -88,7 +88,7 @@
           	{ "field": "monthlypayment", "cols": 4, "value": "$#{MonthlyPayment}", "color": "#50be67" },
           	{ "field": "hr", "marginTopBottom": 0 },
             {
-            	"field": "clientfees",
+            	"field": "autoquoteclientfees",
             	"fieldListOptions": {
             		// "formGroupSpacing": 20,
             		"fields": [
