noUiSlider angular test with dates including moment.js

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 								<li><a href="test/papaparse">Papa Parse</a></li>
 								<li><a href="test/metronic">Metronic</a></li>
 								<li><a href="test/bootstrap-isolate">Bootstrap Isolate</a></li>
+								<li><a href="test/ng_noUiSlider">Angular noUiSlider</a></li>
 							</ul>
 						</li>
 						<li><a href="">link</a></li>
